--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,28 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [
+    "math",
+    "cli",
+    "gui",
+    "config",
+    "util",
+]
+
+[[bin]]
+name = "cli"
+path = "cli/src/main.rs"
+
+[[bin]]
+name = "gui"
+path = "gui/src/main.rs"
+
 [dependencies]
 num = "0.3"
 regex = "1"
-crossterm = "0.17.7"
 indexmap = "1.3.2"
+crossterm = "0.17.7"
+math = { path = "math" }
+util = { path = "util" }
+config = { path = "config" }
