--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ num = "0.3"
 regex = "1"
 indexmap = "1.3.2"
 crossterm = "0.17.7"
+nalgebra = "0.24"
+paste = "1.0"
+approx = "^0.4"
+simba = "^0.3"
 math = { path = "math" }
 util = { path = "util" }
 config = { path = "config" }
